# Rex

./: CMakeLists.txt  LICENSE  README.md
include/: executionengine.hpp  inputhandler.hpp  rex.hpp  suggestion.hpp  types.hpp  ui.hpp
src/: CMakeLists.txt  executionengine.cpp  inputhandler.cpp  launcher.cpp  rex.cpp  ui.cpp
